--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,7 @@ voucher.uri = https://mynt-exam.mocklab.io/voucher/
 voucher.defaultkey = apikey
 
 delivery.domain = delivery
+cost.decimal = 2
 
 spring.datasource.url=jdbc:h2:mem:deliverycostrulesdb
 spring.datasource.driverClassName=org.h2.Driver
