--- a/deployment-deployment.yaml
+++ b/deployment-deployment.yaml
@@ -2,23 +2,26 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: deliverycostcalculator
-labels:
-  app: deliverycostcalculator
+  labels:
+    app: deliverycostcalculator
 spec:
+  selector:
+    matchLabels:
+      app: deliverycostcalculator
   strategy:
     rollingUpdate:
       maxSurge: 25%
       maxUnavailable: 25%
-    type: RollingUpdate
-template:
-  metadata:
-    labels:
-      app: deliverycostcalculator
-  spec:
-    containers:
-    - name: deliverycostcalculator
-      image: jeremypunsalandotcom/deliverycostcalculator:latest
-      imagePullPolicy: Always
-      ports:
-      - containerPort: 8080
-        name: deliverycostcalculator
+      type: RollingUpdate
+  template:
+    metadata:
+      labels:
+        app: deliverycostcalculator
+    spec:
+      containers:
+      - name: deliverycostcalculator
+        image: jeremypunsalandotcom/deliverycostcalculator:latest
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080
+          name: deliverycostcalculator
