--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -6,8 +6,9 @@ metadata:
     app: deliverycostcalculator
 spec:
   ports:
-    port: 8080
+  - port: 8080
     targetPort: 8080
-    selector:
-      app: deliverycostcalculator
-    type: NodePort
+    protocol: TCP
+  selector:
+    app: deliverycostcalculator
+  type: NodePort
