--- a/deployment-ingress.yaml
+++ b/deployment-ingress.yaml
@@ -12,4 +12,4 @@ spec:
       - backend:
           serviceName: deliverycostcalculator
           servicePort: 8080
-    host: api-cost-calculator.jeremypunsalan.com
+    host: deliverycostcalculator-api.jeremypunsalan.com
